--- a/2800 web/package.json
+++ b/2800 web/package.json
@@ -18,6 +18,7 @@
     "jsdom": "^19.0.0",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "router": "^1.3.7"
   }
 }
