--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html": "^1.0.0",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.2",
+    "nodemon": "^2.0.16",
     "request": "^2.88.2"
   }
 }
