--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsdom": "^19.0.0",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.2",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.16",
     "request": "^2.88.2"
   }
